--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <input id="number" type="text" placeholder="郵便番号" />
     <input type="button" value="検索" onclick="request_search_api()" />
     <div id="loading" style="display: none">ローディング中...</div>
+    <br />
+    <br />
+    <a id="api_url"></a>
   </body>
   <script>
     //APIリクエストする
     function request_search_api() {
       const number = document.getElementById("number").value;
-      const loadingElement = document.getElementById("loading");
+      const loading_element = document.getElementById("loading");
+      const result_element = document.getElementById("result");
+      const api_url_element = document.getElementById("api_url");
       // ローディング状態を表示
-      loadingElement.style.display = "block";
+      loading_element.style.display = "block";
 
       /** 公式サイト : https://zipcloud.ibsnet.co.jp/ */
       fetch(`https://zipcloud.ibsnet.co.jp/api/search?zipcode=${number}`)
@@ -29,7 +34,7 @@
         })
         .then((data) => {
           if (data.results) {
-            document.getElementById("result").innerHTML =
+            result_element.innerHTML =
               data.results[0].kana1 +
               data.results[0].kana2 +
               data.results[0].kana3 +
@@ -37,6 +42,10 @@
               data.results[0].address1 +
               data.results[0].address2 +
               data.results[0].address3;
+
+            api_url_element.href = `https://zipcloud.ibsnet.co.jp/api/search?zipcode=${number}`;
+            api_url_element.target = "_blank";
+            api_url_element.textContent = "APIのURLを見る（別タブが開きます）";
           } else {
             document.getElementById("result").innerHTML =
               "該当する住所が見つかりません";
@@ -48,7 +57,7 @@
         })
         .finally(() => {
           // ローディング状態を非表示
-          loadingElement.style.display = "none";
+          loading_element.style.display = "none";
         });
     }
   </script>
